--- a/src/app/media/card/media-card.component.html
+++ b/src/app/media/card/media-card.component.html
@@ -1,5 +1,5 @@
 <div class="card text-center mb">
-    <img src="{{media.url}}" alt="{{media.description}}">
+    <img class="h-75" src="{{media.url}}" alt="{{media.description}}">
   <div class="card-body">
     <h4 class="card-title">{{media.description}}</h4>
   </div>
