--- a/src/app/media/list/media-list.component.html
+++ b/src/app/media/list/media-list.component.html
@@ -2,7 +2,7 @@
 	<add-media (onAdd)="onAdd($event)"></add-media>
 	<div class="row card-group">
 		<media-card *ngFor="let media of mediaList" [media]="media"
-		class="col-12 col-md-6 col-lg-4 col-xl-3"  
+		class="col-12 h-100 col-md-6 col-lg-4 col-xl-3"  
 		(onDelete)="onDelete(media)">
 		</media-card>
 	</div>
